add ignore issue

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -27,6 +27,9 @@ engines:
       # reason: Maybe False detection
       - f96b75d1e4620a3fbfa335ff99194b39
       - f96b75d1e4620a3fbfa335ff99194b39
+      # Identical code found in 1 other location libs/a11yc/views/docs/each.php:66…76
+      # reason: Maybe False detection
+      - 73e992e43bb9e8fbac58ecf65fb9c9f2
   eslint:
     enabled: true
   fixme:
