--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -863,7 +863,6 @@ checks:
         1-4-6:
           - 1-4-6a
           - 1-4-6b
-          - 1-4-6c
       relations:
         1-4-3:
           - 1-4-3a
@@ -882,21 +881,9 @@ checks:
         1-4-3:
           - 1-4-3b
       level: *lv3
-      name: コントラストが甘い箇所は、たいへん大きな文字であり、すくなくとも4.5:1のコントラスト比を保っている
+      name: コントラストが甘い箇所は、たいへん大きな文字であり、すくなくとも4.5:1のコントラスト比を保っている。もしくは、ロゴか、誰にとっても意味のない飾りである
       tech: |
         1.4.3の基準を厳しくしたもの。1.4.3では、3:1のコントラスト比を要求していましたが、大きい文字でも4.5:1のコントラスト比を要求します。
-
-    1-4-6c:
-      criterion: *c1-4-6
-      pass:
-        1-4-6:
-          - 1-4-6a
-          - 1-4-6c
-      relations:
-        1-4-3:
-          - 1-4-3b
-      level: *lv3
-      name: コントラストが甘い箇所は、ロゴか、誰にとっても意味のない飾りである
 
   1-4-7:
     1-4-7a:
