--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -308,33 +308,15 @@ checks:
           - 1-2-1b
           - 1-2-1c
           - 1-2-1d
-        1-2-2:
-          - 1-2-2a
-          - 1-2-2b
-        1-2-3:
-          - 1-2-3a
-        1-2-4:
-          - 1-2-4a
-          - 1-2-4b
-        1-2-5:
-          - 1-2-5a
         1-4-7:
           - 1-4-7a
           - 1-4-7b
           - 1-4-7c
       non-exist:
         - 1-2-1
-        - 1-2-2
-        - 1-2-3
-        - 1-2-4
-        - 1-2-5
-        - 1-2-6
-        - 1-2-7
-        - 1-2-8
-        - 1-2-9
         - 1-4-7
       level: *lv1
-      name: 音声も映像も存在しない
+      name: 音声のみ、映像のみのメディアは存在しない
       tech: |
         関連する達成基準が「適用なし適合」になります。
 
@@ -345,11 +327,8 @@ checks:
           - 1-1-1a
         1-2-1:
           - 1-2-1a
+          - 1-2-1c
           - 1-2-1d
-        1-2-2:
-          - 1-2-2b
-        1-2-3:
-          - 1-2-3a
       relations:
         1-1-1:
           - 1-1-1c
