--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -710,6 +710,8 @@ checks:
       name: 自動再生の音声があるが、3秒以下である。あるいは適切な制御ができる。
       tech: |
         ウェブページ上にある音声が自動的に再生され、3秒より長く続く場合、その音声を一時停止又は停止するメカニズム、もしくはシステム全体の音量レベルに影響を与えずに音量レベルを調整できるメカニズムが利用できる。
+        自動的に再生される音声が、停止、あるいは音量調整ができないと、視覚障害者のスクリーンリーダ利用を致命的に阻害することがあるため本項目は「非干渉（必ず達成しないといけません）」です。
+        音声がなっているため、スクリーンリーダでは、音声をどうやって止めたらいいか、音量をどうやって下げたらいいかわかりづらくなることもあります。
         ちなみに、YouTubeは自動再生です。であるが、視覚障害者にとっては、自動再生がありがたい（＝リンクを踏むだけで、情報を得る流れを得られる。しかもYouTubeとはそういうものだ、という了解もある）という側面もある。この自動再生の利便性は、もしかするとYouTube以外でもありえることかもしれないですが、普通のウェブページでは、注意するようにしてください。
 
   1-4-3:
@@ -1104,6 +1106,7 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.2.1.2.html
       tech: |
         「キーボードトラップ」とは、ある要素にフォーカスが移ってしまうと、そこからキーボード操作で抜け出せなくなるような実装を指します。モーダルウィンドウなどを作る場合は、それを閉じる操作がマウスだけでなく、キーボードでも行えなければいけません。
+        「キーボードのみで操作できること」は、ウェブアクセシビリティの基本的な要件です。本項目は「非干渉（必ず達成しないといけません）」です。
 
   2-1-3:
     2-1-3a:
@@ -1460,6 +1463,7 @@ checks:
       name: 閃光を放つコンテンツが存在するが、一般閃光閾値及び赤色閃光閾値を下回っている
       tech: |
         光過敏症の利用者は、閃光によって発作を引き起こされることがあり、その他のコンテンツをまったく利用できなくなるおそれがあるため、これを禁じています。画面ももちろん、動画のなかでも注意をする必要があるので、動画を再生して確認してください。閃光の詳しい定義については、「達成基準 2.3.1 を理解する」を参照。「点滅」についても注意。
+        本項目は「非干渉（必ず達成しないといけません）」です。
       urls:
         -
           name: 達成基準 2.3.1 を理解する
