--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,9 @@
+# anti directory listing
+# normal
+# Options -Indexes
+# sakura internet
+# DirectoryIndex index.html index.php .ht
+
 <ifModule mod_headers.c>
 # anti Clickjacking
 Header always set X-Frame-Options DENY
