--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -1678,7 +1678,7 @@ checks:
           name: 7.3.1.1 ページの言語に関する達成基準 (等級A)
           url: http://waic.jp/docs/as/info/201406/7.3.1.1.html
       tech: |
-        HTMLのlangの指定で<html lang="ja">のように、ウェブページのデフォルトの言語を指定しておくことで、ユーザエージェントや支援技術がコンテンツを正しく解釈することができるようになる（といいつつ、日本語スクリーンリーダ環境での、アクセシビリティ・サポーテッド状況はあまり芳しくない。iPhone+VoiceOverはきちんと反応するよう）。
+        HTMLのlangの指定で&lt;html lang="ja"&gt;のように、ウェブページのデフォルトの言語を指定しておくことで、ユーザエージェントや支援技術がコンテンツを正しく解釈することができるようになる（といいつつ、日本語スクリーンリーダ環境での、アクセシビリティ・サポーテッド状況はあまり芳しくない。iPhone+VoiceOverはきちんと反応するよう）。
         多言語サイト構築の際など、ついこれを忘れて英語ページでもjaとしてしまうことがあるので要注意です。
         また単一のページ内で多言語が混在する場合は、達成基準3.1.2にも配慮することが強く推奨されています。
 
