--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -39,6 +39,10 @@ errors:
     message: 終了タグが多すぎるようです。このエラーは場所の特定に失敗するので、ブラウザのDOM閲覧などで構造を確認してください
     criterion: 4-1-1
     code: 4-1-1a
+  unclosed_elements:
+    message: 不完全なタグのようです
+    criterion: 4-1-1
+    code: 4-1-1a
   suspicious_ends:
     message: 疑わしい終了タグがあります
     criterion: 4-1-1
@@ -131,21 +135,16 @@ errors:
     message: タグの中に全角スペースが存在します
     criterion: 4-1-1
     code: 4-1-1a
-  # these are not invalid.
-  # label_miss_maches:
-  #   message: form要素の中のforとidの関係が一致していないようです
-  #   criterion: 4-1-1
-  #   code: 4-1-1a
-  # tacit_label_miss_maches:
-  #   message: 暗黙的なlabelのforとidが一致していません
-  #   criterion: 2-4-6
-  #   code: 2-4-6a
   contain_plural_form_elements:
     message: labelは、複数のラベル付け可能な要素を含まないほうが良いです
     criterion: 2-4-6
     code: 2-4-6a
   labelless:
     message: form要素を使う時には、labelを使いましょう
+    criterion: 1-3-1
+    code: 1-3-1a
+  not_label_but_title:
+    message: input/textarea/select要素を使う時には、labelを使いましょう。labelがない場合は空あるいは空文字でないtitle属性を使ってください
     criterion: 1-3-1
     code: 1-3-1a
   lackness_of_form_ends:
