--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -183,7 +183,7 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       tech: |
         なにかの器具の操作の仕方を説明するgifアニメーションは、視覚障害者にとっては理解が難しいが、「器具の操作方法を説明するアニメーション」というような代替テキストをあてることで、機能が説明されたことになります。しかし、結局同じレベルAの、1-2-1dを満たすことを考えると、できるだけ説明をするように心がけた方が良いと考えられます。
-        演説を音声で提供している場合、こういった音声の代替テキストを「演説の音声」としてもこの項目は適合とならない。それは書き起こしテキストを用意することで、「機能を扱える」ようになるので、こういった音声の場合は、書き起こしテキストを用意すること。
+        演説を音声で提供している場合、代替テキストを「演説の音声」としてもこの項目は適合とならない。書き起こしテキストを用意することで、「機能を扱える」ようになるので、こういった音声の場合は、書き起こしテキストを用意すること。
       memo: |
         書籍の朗読の場合で、書き起こしテキストを用意すると、著作権を侵害しうるため、公開できないというような場合は？ 著作権法の中には、障害者についての例外（37条など）を定めているが、ウェブコンテンツの場合は、かならずしも受益者が障害者のみでないので、要注意と考えられます。とりあえず「朗読の音声。著作権保護の観点から書き起こしテキストは用意できない。」と説明することで適合、とすることで良いと考えられます。書籍名がわかれば、原典にあたることもできますので。
 
@@ -260,7 +260,7 @@ checks:
       tech: |
         ヒアリング試験など、聴覚に依存した試験である。
         花の画像が表示され、「どの部分がガクか？」と尋ねるような画像で、試験目的の画像であることを明示している。
-        こういった画像、動画、音声で書き起こしテキストを用意してしまったら試験にならないので、これらはアクセシビリティチェックの対象から外れます。
+        こういった画像、動画、音声で書き起こしテキストを用意してしまったら試験にならないので、この場合はコンテンツの目的を説明することになります。
 
     1-1-1k:
       criterion: *c1-1-1
@@ -297,7 +297,7 @@ checks:
           - 1-1-1k
       tech: |
         「この音声は、ひとが恐怖を感じる音声の例です」「見ていると平衡感覚を失う画像です」というような場合、それを説明している。
-        「特定の感覚」を書き起こしテキストで再現することは、ほとんどの場合不可能なので、これらはアクセシビリティチェックの対象から外れます。
+        「特定の感覚」を書き起こしテキストで再現することは、ほとんどの場合不可能なので、コンテンツの目的を説明することになります。
 
   1-2-1:
     1-2-1a:
