--- a/libs/a11yc/resources/ja/test.yml
+++ b/libs/a11yc/resources/ja/test.yml
@@ -128,7 +128,7 @@ tests:
     name: 「非テキストコンテンツ（カルーセル・スライドショー）」でアクセシビリティを確保するためのメモ
     tech: |
       ウェブサイトにはしばしば「カルーセル（スライドショー）」が設置されます。カルーセルは複数の情報を一箇所で、多くの利用者にとっては目立つ場所に、設置できるため、場合によっては便利なものですが、利用者によっては、バリアになります（2-2-1b）。
-      利用者によっては、自動的な動きのあるコンポーネントは、集中力を妨げ、本来得たい情報の取得を阻害することがあります（2-2-2b）。
+      利用者によっては、自動的な動きのあるコンポーネントは、利用者の集中力を妨げ、本来得たい情報の取得を阻害することがあり、これが致命的な問題になることがあります（2-2-2b）。
       カルーセルに関しては、「利用しない」あるいは「自動再生しない」あるいは「わかりやすい停止方法を提供する」のいずれかの措置を検討してください。
     urls:
       -
