--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -98,6 +98,7 @@ checks:
         HTML5においては、alt省略の例外がありますが、この例外を適用するためには、HTML5の仕様をよく理解した上で適用してください。
         他サーバの画像にリクエストを飛ばして、ログ解析をするための画像なので、空altを入れている。
         画像が存在するが、付近に画像と重複する文字列があり、altを省略している（Aさんの画像があり、その付近に「Aさん」と書いてあるような場合、「Aさん」あるいは「Aさんの画像」といったaltは省略したほうが、スクリーンリーダには読みやすい場合があります）。
+        「画像化された文字」と「画像」の判別をつけやすくするため、「写真：XX」というように接頭辞をつけたり「XXの写真」というように説明的なaltを心がけると良いです。たとえば「和菓子」というaltは、「『和菓子』という文字を画像化」したのか、「和菓子の写真」なのか判断を悩ませることがあります。
         グラフやチャートの画像があるが、それが何のグラフやチャートであるかを説明したaltがある（例：「6月、7月、8月の売上のグラフ」）。レベルAでは、グラフの値の詳述は求めないが、むろん可能な範囲で値の説明もあると良いでしょう。付近にtableでマークアップした表があるのも良いです。
 
     1-1-1c:
