--- a/libs/a11yc/resources/en/errors.yml
+++ b/libs/a11yc/resources/en/errors.yml
@@ -65,11 +65,6 @@ errors:
     criterion: 1-3-1
     code: 1-3-1a
 
-  ja_word_breaking_space:
-    message: There is a possibility of formatting by blank
-    criterion: 1-3-2
-    code: 1-3-2b
-
   meanless_element:
     message: HTML element that are meaningless is used
     criterion: 1-3-1
@@ -237,7 +232,7 @@ errors:
     notice: true
 
   notice_non_html_exists:
-    message: %s elements exists. is this accessible?
+    message: Items of below are accessible?
     criterion: 1-1-1
     code: 1-1-1n
     notice: true
@@ -246,8 +241,16 @@ errors:
     message: There is a possibility of providing information depending on color and size
     criterion: 1-3-1
     code: 1-3-1a
+    notice: true
 
   same_alt_and_filename_of_img:
     message: The alt attribute value of the img element is the same as the file name. Sometimes it is not a problem
     criterion: 1-1-1
     code: 1-1-1b
+    notice: true
+
+  ja_word_breaking_space:
+    message: There is a possibility of formatting by blank
+    criterion: 1-3-2
+    code: 1-3-2b
+    notice: true
