--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -308,15 +308,11 @@ checks:
           - 1-1-1m
           - 1-1-1n
       level: *lv1
-      url_as:
-        -
-          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
-          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       non-exist:
         - 1-1-1
-      name: PDF、Word、Excelのファイルはページ内に存在しない
+      name: PDF、Word、Excel、PowerPointのファイルはページ内に存在しない
       tech: |
-        ページ内にHTMLではない、PDF、Word、Excelなどのファイルが存在しなければ、関連する達成基準が「適用なし適合」になります。
+        ページ内にHTMLではない、PDF、Word、Excel、PowerPointなどのファイルが存在しなければ、関連する達成基準が「適用なし適合」になります。
 
     1-1-1n:
       criterion: *c1-1-1
@@ -326,13 +322,9 @@ checks:
           - 1-1-1m
           - 1-1-1n
       level: *lv1
-      url_as:
-        -
-          name: 7.1.1.1 非テキストコンテンツに関する達成基準 (等級A)
-          url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
-      name: PDF、Word、Excelのファイルが存在するが、アクセシビリティが確保されているか、当該ファイルがHTMLと同等の内容であるか、代替コンテンツがある
+      name: PDF、Word、Excel、PowerPointのファイルが存在するが、アクセシビリティが確保されているか、当該ファイルがHTMLと同等の内容であるか、代替コンテンツがある
       tech: |
-        実際問題、PDF、Word、Excelなどのファイルは、アクセシビリティ確保のノウハウもアクセシビリティサポーテッド状況もあまりはかばかしくありませんので、結局のところ、同等の内容のHTMLを用意するのが、いまのところ、もっともアクセシブルなようです。
+        実際問題、PDF、Word、Excel、PowerPointなどのファイルは、アクセシビリティ確保のノウハウもアクセシビリティサポーテッド状況もあまりはかばかしくありませんので、結局のところ、同等の内容のHTMLを用意するのが、いまのところ、もっともアクセシブルなようです。
         当該ファイルが、申し込み申請書などで、「記入したのちファクス送信」というような運用の場合は、別途、アクセシブルな申請方法（視覚障害者向けであれば電話対応など）を検討してください。
 
 
