--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -65,11 +65,6 @@ errors:
     criterion: 1-3-1
     code: 1-3-1a
 
-  ja_word_breaking_space:
-    message: 空白による整形の可能性があります
-    criterion: 1-3-2
-    code: 1-3-2b
-
   meanless_element:
     message: 意味づけのないHTML要素を使っています
     criterion: 1-3-1
@@ -237,7 +232,7 @@ errors:
     notice: true
 
   notice_non_html_exists:
-    message: %s要素がありますが、アクセシブルですか？
+    message: 以下項目が存在しますが、アクセシブルですか？
     criterion: 1-1-1
     code: 1-1-1n
     notice: true
@@ -252,3 +247,10 @@ errors:
     message: img要素のalt属性値がファイル名と同一です。問題でない場合もあります
     criterion: 1-1-1
     code: 1-1-1b
+    notice: true
+
+  ja_word_breaking_space:
+    message: 空白による整形の可能性があります
+    criterion: 1-3-2
+    code: 1-3-2b
+    notice: true
