--- a/libs/a11yc/resources/en/errors.yml
+++ b/libs/a11yc/resources/en/errors.yml
@@ -1,10 +1,5 @@
 errors:
 
-  check_doctype:
-    message: Use Doctype Declarations to specify DTD
-    criterion: 4-1-1
-    code: 4-1-1a
-
   alt_attr_of_img:
     message: The alt attribute of the img element is missing. Please do not omit the alt attribute value itself even for images for decorative purposes
     criterion: 1-1-1
@@ -219,6 +214,12 @@ errors:
     message: section should include h1-6 element
     criterion: 1-3-1
     code: 1-3-1a
+
+  check_doctype:
+    message: Use Doctype Declarations to specify DTD
+    criterion: 4-1-1
+    code: 4-1-1a
+    notice: true
 
   notice_img_exists:
     message: img elements exists. valid alt?
