--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -1,10 +1,5 @@
 errors:
 
-  check_doctype:
-    message: DOCTYPE宣言を使用してDTDを指定してください
-    criterion: 4-1-1
-    code: 4-1-1a
-
   alt_attr_of_img:
     message: img要素のalt属性がありません。装飾目的の画像であってもalt属性値そのものを省略しないでください
     criterion: 1-1-1
@@ -219,6 +214,12 @@ errors:
     message: sectionタグはh1-6要素を含めることをおすすめします
     criterion: 1-3-1
     code: 1-3-1a
+
+  check_doctype:
+    message: DOCTYPE宣言を使用してDTDを指定してください
+    criterion: 4-1-1
+    code: 4-1-1a
+    notice: true
 
   notice_img_exists:
     message: img要素がありますが、altは妥当ですか？
