--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -678,6 +678,7 @@ checks:
       tech: |
         「博物館」を「博 物 館」と記述してしまうようなこと（いわゆる「単語の泣き別れ」）や、改行や空文字を駆使したレイアウトをして、意味の理解を妨げないようにしてください。改行で行の終端をそろえたり、空文字で行等をそろえていると、スクリーンリーダで情報を取得しづらくなるだけでなく、文字サイズ変更時などにも、たいへん読みづらくなります。また、検索エンジン対策上もけっしてプラスには働きません。
         他方、スペースを用いて整形するのが自然な場合もあります。エラーチェックに引っかかることがありますが、法人格と法人名を「株式会社 みやこ酒店」というような表記を禁止する必要はないでしょう。
+        マークアップエンジニアがHTMLの可読性維持のために、altなどの属性値中で、改行による整形をする場合、一部のスクリーンリーダで改行ごとに意図しない読み上げを行う事例もあることを覚えておくと良い。
 
   1-3-3:
     1-3-3a:
